[package]
name = "qwestive-voting"
version = "0.1.0"
description = "Qwestive Voting"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "qwestive_voting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = {version = "0.20.1"}
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }